# SoftwareCompensationMarlinPandora

./: CMakeLists.txt  README.md  WeightMakingScript.C
SoftwareCompensationWeights/: AutoDict_vector_EventC_.cxx  AutoDict_vector_EventC__cxx.d  DrawWeights.C  SoftCompWeightDetermination.C  SoftCompWeightDetermination_C.d
SoftwareCompensationWeights/CompiledWeightDetermination/: CMakeLists.txt
SoftwareCompensationWeights/CompiledWeightDetermination/include/: SoftCompWeightDetermination.h
SoftwareCompensationWeights/CompiledWeightDetermination/src/: EventClass.cc  SoftCompWeightDetermination.cxx
include/: EnergyCorrectionSC.h  EnergyCorrectionSCLan.h  PfoCreator.h  RegisterHitsForSC.h
include/include/: EnergyCorrectionSC.h  PfoCreator.h
scripts/: MarlinSteeringFileTemplate.xml  PandoraSettingsDefault.xml  PandoraSettingsDefault_NoECorr.xml  PandoraSettingsDefault_NoECorr_Training.xml  PandoraSettingsDefault_NoSC.xml  PandoraSettingsDefault_SoftComp.xml  PandoraSettingsDefault_SoftComp_10GeV.xml  PandoraSettingsPerfectPFA_NoECorr.xml  PandoraSettingsPerfectPFA_NoSC.xml  PandoraSettingsPerfectPFA_SoftComp.xml  PandoraSettingsPerfectPFA_SoftComp_10GeV.xml
src/: CellEnergyAlgorithm.cc  EnergyCorrectionSC.cc  EnergyCorrectionSCLan.cc  PandoraPFANewProcessor.cc  PfoCreator.cc  RegisterHitsForSC.cc
src/src/: EnergyCorrectionSC.cc  PfoCreator.cc  RegisterHitsForSC.cc
